--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,11 @@
   "rules": {
     "indent": ["error", 4],
     "semi": [2, "always"],
-    "space-before-function-paren": [0, "always"]
+    "space-before-function-paren": [0, "always"],
+    "no-multi-spaces": "off",
+    "key-spacing": "off"
   },
   "globals": {
-    "jQuery": 1
+    "jQuery": true
   }
 }
