--- a/config.json
+++ b/config.json
@@ -25,6 +25,6 @@
     "!./public/images",
     "!./public/images/**/*",
     "!./public/**/*.php",
-    "./public/**/*.html"
+    "!./public/**/*.html"
   ]
 }
