--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.18.2",
     "del": "^2.2.2",
     "eslint": "^3.9.1",
@@ -9,6 +11,7 @@
     "foundation-sites": "^6.1.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^7.0.1",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
